force-app/main/default/objects/Program/Program.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>