force-app/main/default/objects/Program/fields/Appropriating_Ordinance__c.field-meta.xml
<CustomField>
    <fullName>Appropriating_Ordinance__c</fullName>
    <label>Appropriating Ordinance</label>
    <length>65</length>
    <type>Text</type>
</CustomField>