force-app/main/default/objects/Program/fields/Assistance_Listing_Number__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Listing_Number__c</fullName>
    <inlineHelpText>Set this on the Parent Program Record</inlineHelpText>
    <label>Assistance Listing Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>