force-app/main/default/objects/Program/fields/Environmental_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an environmental review is mandated for the Program.</description>
    <label>Environmental Review Required</label>
    <type>Checkbox</type>
</CustomField>