force-app/main/default/objects/Program/fields/Federal_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Federal_Award_Date__c</fullName>
    <label>Federal Award Date</label>
    <type>Date</type>
</CustomField>