force-app/main/default/objects/Program/fields/Grant_Award_Period_of_Performance_End__c.field-meta.xml
<CustomField>
    <fullName>Grant_Award_Period_of_Performance_End__c</fullName>
    <inlineHelpText>End date of the grant award period of performance</inlineHelpText>
    <label>Grant Award Period of Performance End</label>
    <type>Date</type>
</CustomField>