force-app/main/default/objects/Program/fields/Grant_Award_Period_of_Performance_Start__c.field-meta.xml
<CustomField>
    <fullName>Grant_Award_Period_of_Performance_Start__c</fullName>
    <inlineHelpText>Start date for the grant award period of performance</inlineHelpText>
    <label>Grant Award Period of Performance Start</label>
    <type>Date</type>
</CustomField>