force-app/main/default/objects/Program/fields/Helper_Days_in_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Helper_Days_in_Current_Year__c</fullName>
    <formula>DATE(YEAR(TODAY()), 12, 31) - DATE(YEAR(TODAY()), 1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Helper # Days in Current Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>