force-app/main/default/objects/Program/fields/Program_Number__c.field-meta.xml
<CustomField>
    <fullName>Program_Number__c</fullName>
    <label>Program Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>