force-app/main/default/objects/Program/fields/Total_Appropriation__c.field-meta.xml
<CustomField>
    <fullName>Total_Appropriation__c</fullName>
    <inlineHelpText>Manually entered.  This is set as a target of the program, to allow for tracking against funds that get reserved.</inlineHelpText>
    <label>Total Appropriation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>