force-app/main/default/objects/Program/fields/Total_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed__c</fullName>
    <inlineHelpText>This is the total of funds that have been disbursed at the contract level, for the funding award that relates to this Program.  Sorce is the Funding Disbursement (Financial Activity), that has been approved, and scheduled for payment or paid.</inlineHelpText>
    <label>Total Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>