force-app/main/default/objects/Program/fields/Total_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserved__c</fullName>
    <inlineHelpText>This is the total of the funding awards on contracts in Draft Status</inlineHelpText>
    <label>Total Reserved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>