force-app/main/default/objects/Program/fields/TotalObligated__c.field-meta.xml
<CustomField>
    <fullName>TotalObligated__c</fullName>
    <inlineHelpText>This is a sum off all the awarded appropriations at the contract level.  Contract status = Active.</inlineHelpText>
    <label>Total Obligated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>