force-app/main/default/objects/Program/recordTypes/Federal_Program_parent.recordType-meta.xml
<RecordType>
    <fullName>Federal_Program_parent</fullName>
    <active>true</active>
    <description>This is the top level program, this stays static, does not have start, end dates.</description>
    <label>Federal Program (parent)</label>
</RecordType>