force-app/main/default/objects/Program/recordTypes/Local_Program.recordType-meta.xml
<RecordType>
    <fullName>Local_Program</fullName>
    <active>true</active>
    <label>Local Program</label>
</RecordType>