force-app/main/default/objects/Program/listViews/All_Programs.listView-meta.xml
<ListView>
    <fullName>All_Programs</fullName>
    <columns>Name</columns>
    <columns>Summary</columns>
    <columns>StartDate</columns>
    <columns>Status</columns>
    <columns>RecordType</columns>
    <filterScope>Everything</filterScope>
    <label>All Programs</label>
</ListView>