force-app/main/default/objects/Program/listViews/All_Programs_with_ERR_Status.listView-meta.xml
<ListView>
    <fullName>All_Programs_with_ERR_Status</fullName>
    <columns>Name</columns>
    <columns>Summary</columns>
    <columns>StartDate</columns>
    <columns>Status</columns>
    <columns>Environmental_Review_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>Program.Local_Program</value>
    </filters>
    <label>All Programs with ERR Status</label>
</ListView>