force-app/main/default/objects/Program/listViews/City_Programs.listView-meta.xml
<ListView>
    <fullName>City_Programs</fullName>
    <columns>Name</columns>
    <columns>Summary</columns>
    <columns>StartDate</columns>
    <columns>Status</columns>
    <columns>ParentProgram</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>Program.Local_Program</value>
    </filters>
    <label>City Programs</label>
    <sharedTo>
        <group>CDBG_Internal_Users</group>
    </sharedTo>
</ListView>