force-app/main/default/objects/Program/listViews/Federal_Programs_Parent.listView-meta.xml
<ListView>
    <fullName>Federal_Programs_Parent</fullName>
    <columns>Name</columns>
    <columns>Summary</columns>
    <columns>StartDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>Program.Federal_Program_parent</value>
    </filters>
    <label>Federal Programs (Parent)</label>
</ListView>